TrainingStaging/force-app/main/default/objects/Contact/fields/Trainee_ID__c.field-meta.xml
<CustomField>
    <fullName>Trainee_ID__c</fullName>
    <description>Unique identifier for each trainee . (add in Trainee Layout)</description>
    <label>Trainee ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>