TrainingStaging/force-app/main/default/objects/Contact/fields/Trainee_Level__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Level__c</fullName>
    <description>To show Trainee knowledge level. (add in Trainee Layout)</description>
    <label>Trainee Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Beginner</fullName>
            </value>
            <value>
                <fullName>2. Intermediate</fullName>
            </value>
            <value>
                <fullName>3. Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>