TrainingStaging/force-app/main/default/objects/Contact/fields/Trainer_Availability__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Availability__c</fullName>
    <description>To show trainer availability time. (add in Trainer Layout)</description>
    <label>Trainer  Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Weekdays</fullName>
            </value>
            <value>
                <fullName>2. Weekends</fullName>
            </value>
            <value>
                <fullName>3. Flexible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>