TrainingStaging/force-app/main/default/objects/Contact/fields/Training_Coverage_Area__c.field-meta.xml
<CustomField>
    <fullName>Training_Coverage_Area__c</fullName>
    <description>A detailed description of areas or regions the trainer can conduct sessions . (add in Trainer Layout)</description>
    <label>Training  Coverage Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>