TrainingStaging/force-app/main/default/objects/Contact/fields/Training_Credits__c.field-meta.xml
<CustomField>
    <fullName>Training_Credits__c</fullName>
    <description>To show Sessions attended by trainee. (add in Trainee Layout)</description>
    <label>Training  Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>