TrainingStaging/force-app/main/default/objects/Contact/fields/Training_Specialization__c.field-meta.xml
<CustomField>
    <fullName>Training_Specialization__c</fullName>
    <description>Specialization in Service. (add in Trainer Layout)</description>
    <label>Training  Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Technical Training</fullName>
            </value>
            <value>
                <fullName>2. Soft Skills Training</fullName>
            </value>
            <value>
                <fullName>3. Corporate Training</fullName>
            </value>
            <value>
                <fullName>4. Certification Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>